--- a/Cours3/app/src/main/res/layout/activity_main.xml
+++ b/Cours3/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/editText_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="128dp"
+        android:ems="10"
+        android:hint="Your message..."
+        android:inputType="textShortMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_sendMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Envoyer"
+        app:layout_constraintEnd_toEndOf="@+id/editText_message"
+        app:layout_constraintStart_toStartOf="@+id/editText_message"
+        app:layout_constraintTop_toBottomOf="@+id/editText_message" />
 </androidx.constraintlayout.widget.ConstraintLayout>
